--- a/config.toml
+++ b/config.toml
@@ -6,21 +6,19 @@ parallel-jobs = 1
 
 # you can use rvmm-config-gen to generate a config
 
-[YouTube]
+[RVX-YouTube]
 apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube/"
 patches-source = "anddea/revanced-patches"
 cli-source = "inotia00/revanced-cli"
-rv-brand = "anddea ReVanced"
 arch = "arm64-v8a"
 build-mode = "module"
 version = "20.21.37"
 included-patches = "'Theme'"
 
-[Music]
+[RVX-Music]
 apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube-music/"
 patches-source = "anddea/revanced-patches"
 cli-source = "inotia00/revanced-cli"
-rv-brand = "anddea ReVanced"
 arch = "arm64-v8a"
 build-mode = "module"
 version = "8.30.54"
