--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ parallel-jobs = 1
 
 # you can use rvmm-config-gen to generate a config
 
-[RVX-YouTube]
+[XD-YouTube]
 apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube/"
 patches-source = "anddea/revanced-patches"
 cli-source = "inotia00/revanced-cli"
@@ -15,7 +15,7 @@ build-mode = "module"
 version = "20.21.37"
 included-patches = "'Theme'"
 
-[RVX-Music]
+[XD-Music]
 apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube-music/"
 patches-source = "anddea/revanced-patches"
 cli-source = "inotia00/revanced-cli"
