--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ parallel-jobs = 1
 apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube/"
 patches-source = "anddea/revanced-patches"
 cli-source = "inotia00/revanced-cli"
-arch = "arm64-v8a"
+arch = "both"
 build-mode = "module"
 version = "20.21.37"
 included-patches = "'Theme'"
